Compositer "Crop" node option "Crop Image Size" doesn't really crop the input image #32955

Closed
opened 2012-10-23 20:59:22 +02:00 by Daniel Toplak · 5 comments

%%%The output of a croped image is not really croped, if the option "Crop Image Size" is enabled.
Attached is a blend file with an easy node setup, it uses a Translate node after the crop and you will see, that parts of the image are visible after the translate node which should be croped.%%%

%%%The output of a croped image is not really croped, if the option "Crop Image Size" is enabled. Attached is a blend file with an easy node setup, it uses a Translate node after the crop and you will see, that parts of the image are visible after the translate node which should be croped.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%The crop node has limited use still, we don't have "canvas awareness" in Blender yet. Compositer design is currently fully meant to work as part of a render pipeline, where the image resolution is fixed.

Jeroen: a translate node before or after crop node gives same result. Is that meant to?%%%

%%%The crop node has limited use still, we don't have "canvas awareness" in Blender yet. Compositer design is currently fully meant to work as part of a render pipeline, where the image resolution is fixed. Jeroen: a translate node before or after crop node gives same result. Is that meant to?%%%
Member

%%%Well the image setting of the crop node just centers the image and resizes the view of the image, but when mixed with other nodes not visible pixels can be displayed.

When not using the image setting the color is blacked. Perhaps we should also do that with the image setting. This way the crop node will work better.
%%%

%%%Well the image setting of the crop node just centers the image and resizes the view of the image, but when mixed with other nodes not visible pixels can be displayed. When not using the image setting the color is blacked. Perhaps we should also do that with the image setting. This way the crop node will work better. %%%
Member

%%%fixed in revision 51573%%%

%%%fixed in revision 51573%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32955
No description provided.