Updated crop image setting to make every pixel outside the crop black as it is expected.

Fix for [#32955] Compositer "Crop" node option "Crop Image Size" doesn't
really crop the input image